# tether

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  HANDOFF.md  IMPLEMENTATION.md  Makefile  claude-spec.md  openapi.json  rust-toolchain.toml
.cargo/: config.toml
crates/tether-core/: Cargo.toml
crates/tether-core/src/: bluetooth.rs  config.rs  error.rs  lib.rs  passes.rs  storage.rs  types.rs
crates/tether-mcp/: Cargo.toml  Dockerfile
crates/tether-mcp/src/: main.rs
crates/tether-server/: Cargo.toml
crates/tether-server/src/: api.rs  lib.rs  logging.rs  main.rs  state.rs
crates/tether-server/src/api/: bluetooth.rs  config.rs  error.rs  health.rs  openapi.rs  passes.rs  system.rs
deploy/cloud/: deploy.sh
deploy/pi/sdm/: build-image.sh
deploy/pi/sdm/assets/config/: tether.toml
deploy/pi/sdm/assets/dbus/: tether-bluetooth.conf  tether-networkmanager.conf
deploy/pi/sdm/assets/nginx/: tether.conf
deploy/pi/sdm/assets/scripts/: tether-network-watchdog.sh  tether-save-ticket.sh  tether-setup-dirs.sh  tether-setup-user.sh
deploy/pi/sdm/assets/systemd/: tether-dumbpipe.service  tether-network-watchdog.service  tether-server.service
deploy/pi/sdm/configs/: apps.txt  copyfiles.txt
deploy/pi/sdm/plugins/: tether
docker/: Dockerfile.armv7
plans/: 1.1-workspace-setup.md  1.2-config-module.md  1.3-passes-module.md  1.4-bluetooth-module.md  1.5-error-types.md  1.6-http-server-setup.md  1.7-http-routes.md  1.8-openapi-generation.md  2.1-webui-project-setup.md  2.2-routing-and-layout.md  2.3-onboarding-wizard.md  2.4-dashboard-components.md  2.5-settings-drawer.md  3.1-sdm-plugin.md  3.2-systemd-services.md  3.3-network-watchdog.md  3.4-cross-compilation.md  4.1-mcp-server.md  4.2-makefile-scripts.md
scripts/: build-image.sh  build-pi.sh  build-web.sh  extract-agent-output.sh  extract-all-agents.sh  generate-openapi.sh
web-ui/: .env.example  .gitignore  biome.json  index.html  openapi-ts.config.ts  package.json  tsconfig.node.json  vite.config.ts
web-ui/src/: App.tsx  index.css  main.tsx
web-ui/src/components/dashboard/: DumbpipeCard.tsx  PassHistoryList.tsx  PassesCard.tsx  ProximityCard.tsx  UsePassDialog.tsx  index.ts
web-ui/src/components/layout/: AppShell.tsx  MobileNav.tsx
web-ui/src/components/onboarding/: OnboardingWizard.tsx
web-ui/src/components/onboarding/steps/: BluetoothScanStep.tsx  CompletionStep.tsx  PassesConfigStep.tsx  SignalThresholdStep.tsx  TimezoneStep.tsx  WifiConfigStep.tsx
web-ui/src/components/settings/: BluetoothSettings.tsx  PassesSettings.tsx  SettingsDrawer.tsx  SettingsMenu.tsx  SystemSettings.tsx  TimezoneSettings.tsx  WifiSettings.tsx  index.ts
web-ui/src/hooks/: useOnboardingApi.ts  useOnboardingState.ts
web-ui/src/lib/: api-client.ts  queryClient.ts
web-ui/src/pages/: DashboardPage.tsx  OnboardingPage.tsx
web-ui/src/types/: onboarding.ts
