[workspace]
resolver = "2"
members = [
    "crates/tether-core",
    "crates/tether-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Jeffrey <jeffrey@example.com>"]
license = "MIT"
repository = "https://github.com/jeffrey/tether"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# OpenAPI documentation
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Bluetooth
btleplug = { version = "0.11", features = ["serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Identifiers
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration
config = "0.14"
directories = "5.0"

# Internal crates
tether-core = { path = "crates/tether-core" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.dev]
opt-level = 0
debug = true
