[package]
name = "tether-mcp"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
description = "MCP server for Tether - connects to Raspberry Pi via dumbpipe"
keywords = ["mcp", "tether", "dumbpipe", "iroh"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "tether-mcp"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "process", "signal", "sync", "time", "io-util", "macros", "rt-multi-thread"] }

# MCP SDK - official Rust SDK
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }

# HTTP client for API calls through tunnel
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL handling
url = "2.5"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging and tracing
tracing.workspace = true
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true

[features]
default = []

[lints]
workspace = true
