[package]
name = "tether-server"
description = "HTTP server for tether - exposes proximity tracking and pass management via REST API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tether-server"
path = "src/main.rs"

[features]
default = ["bluetooth"]
bluetooth = ["tether-core/bluetooth"]
mock-bluetooth = ["tether-core/mock-bluetooth"]

[dependencies]
# Internal crates
tether-core = { workspace = true, default-features = false }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Date/Time
chrono = { workspace = true }
chrono-tz = { workspace = true }

# Identifiers
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Configuration
directories = { workspace = true }

[dev-dependencies]
axum-test = "16.4"
tokio-test = "0.4"
tempfile = { workspace = true }

[lints]
workspace = true
